--- a/configs/ldm/srn_cars_2d.yaml
+++ b/configs/ldm/srn_cars_2d.yaml
@@ -33,8 +33,8 @@ model:
 data:
   domain: image
   mode: train
-  data_dir: ./train_data_path/
-  test_data_dir: ./test_data_path/
+  data_dir: /data_ssd/pwojcik/sh_raw_train/
+  test_data_dir: /data_ssd/pwojcik/sh_raw_test/
   save_pth: ./save_path/
   batch_size: 5
   test_batch_size: 6
