--- a/configs/ldm/srn_cars_2d.yaml
+++ b/configs/ldm/srn_cars_2d.yaml
@@ -18,7 +18,7 @@ model:
       image_size: 64
       channels: 50307
       clip_denoised: False
-      mixed_prediction: False
+      mixed_prediction: True
       mixed_init: -6
       sampling_timesteps: 50
       ddim_sampling_eta: 0
